# socket_service_discovery

./: CMakeLists.txt  README.md  UDP多播收发.md  build.sh  multicast.cap  udp.cap
docs/: UDP多播收发.md
include/common/: headers.h  packet.h  transfer.h
include/service_discovery/: client.h  sd_client.h  sd_service.h  service_discovery_master.h
include/service_discovery/sd_package/: sd_package.h
include/tcp/: client.h  server.h
include/udp/: udp_client.h  udp_server.h
include/unix_socket/stream/: client.h  server.h
src/: main.cpp
src/common/: transfer.cpp
src/service_discovery/: sd_client.cpp  sd_server.cpp  service_discovery_master.cpp
src/tcp/: client.cpp  server.cpp
src/udp/: udp_client.cpp  udp_server.cpp
src/unix_socket/stream/: client.cpp  server.cpp
